Fixing bug related to popover not showing in Modal

--- a/vcweb/core/templates/experimenter/show-configuration.html
+++ b/vcweb/core/templates/experimenter/show-configuration.html
@@ -126,7 +126,7 @@
                    ' [x '+ self.repeat() +']': self.name() + ' ' + self.sequence_number();
             };
             self.toggleVisibility = function() {
-                self.isExpanded(!model.isExpanded());
+                self.isExpanded(!self.isExpanded());
             };
         }
 
