--- a/vcweb/core/templates/invalid_request.html
+++ b/vcweb/core/templates/invalid_request.html
@@ -9,7 +9,7 @@
         <div class='panel-heading'><h3 class='panel-title'>Invalid Request</h3></div>
         <div class='panel-body alert-warning'>
             <i class='fa fa-exclamation-triangle text-danger'></i> {{ message|default:"We couldn't complete your request. " }}
-            Please <a href='/contact'>contact us</a> if this an error.
+            Please <a href='/contact'>contact us</a> if this is an error on our end.
         </div>
     </div>
 {% endblock page %}
