--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -20,10 +20,13 @@
         </div>
         <h2>Current development</h2>
         <div>
-            This website has been tested against up-to-date versions of <a href='http://www.google.com/chrome'>Google Chrome</a>,
-            <a href='http://getfirefox.com'>Mozilla Firefox</a> and <a href='http://www.apple.com/safari'>Safari</a>.
+            We test our software against up-to-date versions of <a href='http://www.google.com/chrome'>Google Chrome</a>,
+            <a href='http://getfirefox.com'>Mozilla Firefox</a> and <a href='http://www.apple.com/safari'>Safari</a>. 
+            if you encounter any problems please make sure you are using a recent release of one of these browsers, and
+            feel free to <a href='/bug-report'>file a bug report</a> or <a href='/contact'>contact us</a> if you
+            encounter any issues.
 
-            You can find up-to-date development news and documentation at our <a class='external' href='https://github.com/virtualcommons/vcweb'>GitHub repository</a>.
+            Up-to-date development news and documentation can be found at our <a class='external' href='https://github.com/virtualcommons/vcweb'>GitHub repository</a>.
         </div>
         <h2>Acknowledgements</h2>
         <p>
@@ -33,7 +36,7 @@
         </p>
         <p>
             Open source and education licenses have been generously provided by 
-            <a href='http://www.jetbrains.com/pycharm'>Jetbrains <img width='80' height='18' class='img-inline' src='//www.jetbrains.com/pycharm/docs/logo_pycharm.png'></a>, <a href='http://www.yourkit.com'>the YourKit Java profiler</a>,
+            <a href='http://www.jetbrains.com/pycharm'>Jetbrains <img width='80' height='18' class='img-inline' alt='pycharm logo' src='//www.jetbrains.com/pycharm/docs/logo_pycharm.png'></a>, <a href='http://www.yourkit.com'>the YourKit Java profiler</a>,
             <a href='http://www.atlassian.com'>Atlassian</a> <a href='http://bitbucket.org'>Bitbucket</a>, and <a href='https://github.com'>GitHub</a>.
         </p>
     </div>
