--- a/vcweb/static/css/style.css
+++ b/vcweb/static/css/style.css
@@ -11,6 +11,9 @@ a.external {
 h1,h2,h3,h4,h5 {
     color: #42555e;
 }
+.devserver {
+    margin-top: 15px;
+}
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.2em; }
 h4 { font-size: 1.0em; }
