--- a/vcweb/core/templates/experimenter/subject-pool-index.html
+++ b/vcweb/core/templates/experimenter/subject-pool-index.html
@@ -105,8 +105,9 @@ Experiment Session Management
 
 {% block javascript %}
 {{ block.super }}
-    <script src='{{ STATIC_URL }}js/bootstrap-datepicker.min.js'></script>
-    <link rel="stylesheet" href='{{ STATIC_URL }}css/datepicker.css' />
+    <script src='{{ STATIC_URL }}js/moment.js'></script>
+    <script src='{{ STATIC_URL }}js/bootstrap-datetimepicker.min.js'></script>
+    <link rel="stylesheet" href='{{ STATIC_URL }}css/bootstrap-datetimepicker.min.css' />
     <script type= "text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/calendar.js"></script>
     <link rel="stylesheet" href="{{ STATIC_URL }}css/calendar.css">
@@ -142,7 +143,7 @@ Experiment Session Management
                                 <td>
 				                    <span >
                                         <div class="input-group input-group-sm">
-                                            <input name="start_date" type="text" class="form-control date-start" data-bind="datepicker : start_date, value: start_date , enable: isEditable" />
+                                            <input name="start_date" type="text" class="form-control date-start" data-date-format="YYYY-MM-DD" data-bind="datepicker : start_date, value: start_date , enable: isEditable" />
                                             <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                                         </div>
                                     </span>
@@ -206,7 +207,7 @@ Experiment Session Management
                                 <td>
                                     <span>
                                         <div class="input-group input-group-sm">
-                                            <input name="end_date" type="text" class="form-control date-end" data-bind="datepicker : end_date, value: end_date, enable: isEditable" />
+                                            <input name="end_date" type="text" class="form-control date-end" data-date-format="YYYY-MM-DD" data-bind="datepicker : end_date, value: end_date, enable: isEditable" />
                                             <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                                         </div>
                                     </span>
