--- a/vcweb/core/templates/experimenter/subject-pool-index.html
+++ b/vcweb/core/templates/experimenter/subject-pool-index.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %}
 {% load bootstrap3 %}
-{% block title %}
-Experiment Session Management
-{% endblock %}
+{% block title %} Experiment Session Management {% endblock %}
 {% block page %}
     <div class="row" id='page'>
         <div id="content" class="span12">
@@ -143,29 +141,31 @@ Experiment Session Management
                                 <td>
 				                    <span >
                                         <div class="input-group input-group-sm">
-                                            <input name="start_date" type="text" class="form-control date-start" data-date-format="YYYY-MM-DD" data-bind="datepicker : start_date, value: start_date , enable: isEditable" />
+                                            <input name="start_date" type="text" class="form-control date-start" data-date-format="YYYY-MM-DD hh:mm" data-bind="datepicker : start_date, value: start_date , enable: isEditable" />
                                             <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                                         </div>
                                     </span>
                                 </td>
-                                <td>
-				                    <select  class="form-control input-sm" name="start_hour" data-bind ="foreach: $root.allHours,value : start_hour, enable: isEditable">
-                                        <option data-bind="value: $index(), text: $data "></option>
-                                    </select>
-                                </td>
-                                <td>
-                                    <select class="form-control input-sm" name="start_min" data-bind ="foreach: $root.allMinutes,value : start_min, enable: isEditable">
-                                        <option data-bind="value: $index() * 15, text: $data"></option>
-                                     </select>
-                                </td>
-                                <td>
+                                <td rowspan="2">
                                     <span class=" label label-info session-label">Capacity:</span>
                                 </td>
-                                <td>
-                                    <input style="width: 70px;" class="form-control input-sm" name="capacity" type="number" min="2" data-bind ="value : capacity, enable: isEditable" />
-				                </td> 
+                                <td rowspan="2">
+                                    <input style="width: 60px;" class="form-control input-sm" name="capacity" type="number" min="2" data-bind ="value : capacity, enable: isEditable" />
+				                </td>
+                                <td rowspan="2">
+                                    <span class="label label-info session-label">Invites sent: </span>
+                                </td>
+                                <td rowspan="2">
+                                    <span class="badge invite-badge" data-bind="text: invite_count">0</span>
+                                </td>
+                                <td rowspan="2">
+                                    <span class=" label label-info session-label">Signups:</span>
+                                </td>
+                                <td rowspan="2">
+                                    <span class="badge invite-badge" data-bind="text: signup_count">0</span>
+				                </td>
                                 <!-- ko if: active -->
-                                <td colspan="2">
+                                <td rowspan="2">
                                     <div class="btn-group" data-bind = "visible: isEditable">
                                         <button class="btn btn-success" data-bind="click: $root.saveSession">
                                             <i class="fa fa-floppy-o"></i>
@@ -188,7 +188,7 @@ Experiment Session Management
                                 </td>
                                 <!-- /ko -->
                                 <!-- ko ifnot: active -->
-                                <td data-bind="ifnot: active" colspan="2">
+                                <td rowspan="2">
                                     <div class="btn-group">
                                         <a class="btn btn-primary" data-bind="attr: {href: 'session/detail/event/'+ pk()}">
                                             <i class="fa fa-eye"></i>
@@ -207,34 +207,11 @@ Experiment Session Management
                                 <td>
                                     <span>
                                         <div class="input-group input-group-sm">
-                                            <input name="end_date" type="text" class="form-control date-end" data-date-format="YYYY-MM-DD" data-bind="datepicker : end_date, value: end_date, enable: isEditable" />
+                                            <input name="end_date" type="text" class="form-control date-end" data-date-format="YYYY-MM-DD hh:mm" data-bind="datepicker : end_date, value: end_date, enable: isEditable" />
                                             <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                                         </div>
                                     </span>
-                                </td>
-                                <td>
-                                    <select  class="form-control input-sm" name="end_hour" data-bind ="foreach: $root.allHours ,value : end_hour, enable: isEditable">
-                                        <option data-bind="value: $index(), text: $data "></option>
-                                    </select>
-                                </td>
-                                <td>
-                                    <select class="form-control input-sm" name="end_min" data-bind ="foreach: $root.allMinutes ,value : end_min, enable: isEditable">
-                                        <option data-bind="value: $index() * 15, text: $data"></option>
-                                    </select>
-                                </td>
-                                <td>
-                                    <span class="label label-info session-label">Invites sent: </span>
-                                </td>
-                                <td>
-                                    <span class="badge invite-badge" data-bind="text: invite_count">0</span>
-                                </td>
-                                <td>
-                                    <span class=" label label-info session-label">Signups:</span>
-                                </td>
-                                <td>
-                                    <span class="badge invite-badge" data-bind="text: signup_count">0</span>
-				                </td>
-
+                                </td> 
                             </tr>
                         </tbody>
                     </table>
@@ -295,8 +272,7 @@ Experiment Session Management
             var SessionListViewModel = function(data) {
                 var self = this;
                 var model = ko.mapping.fromJS(data, session_mapping, self)
-                model.allHours = ['00', '01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', '23'];
-                model.allMinutes = ['00', '15', '30', '45'];
+ 
                 model.inviteSessionCount = ko.observable(0);
                 model.invite_experiment_metadata = -1;
                 model.addInvite = function(data, event) {
@@ -350,17 +326,14 @@ Experiment Session Management
 
                 model.addSession = function() {
                     var tom = new Date(new Date().getTime() + 24 * 60 * 60 * 1000);
-                    var date = tom.getFullYear() + "-" +tom.getMonthFormatted() + "-" + tom.getDateFormatted();
+                    var tom_date_time = tom.getFullYear() + "-" +tom.getMonthFormatted() + "-" + tom.getDateFormatted() + " " + tom.getHours() + ":" + tom.getMinutes();
                     model.session_list.push(
-                        new SessionModel({ pk: -1, experiment_metadata: -1, start_date: date, end_date: date, start_hour: '00', start_min: 0, end_hour: '00', end_min: 0, capacity:10, invite_count: 0, location: "Online", isEditable: true, signup_count: 0})
+                        new SessionModel({ pk: -1, experiment_metadata: -1, start_date: tom_date_time, end_date: tom_date_time, capacity:10, invite_count: 0, location: "Online", isEditable: true, signup_count: 0})
                     );
                 };
 
                 model.saveSession = function(session, event) {
-                    var scheduled_date = session.start_date() + " " + session.start_hour() + ":" + session.start_min();
-                    var scheduled_end_date = session.end_date() + " " + session.end_hour() + ":" + session.end_min();
-
-                    if(+new Date(scheduled_date) >= +new Date(scheduled_end_date)){
+                    if(+new Date(session.start_date()) >= +new Date(session.end_date())){
                         bootbox.alert(
                             "ERROR: End date cannot be earlier than or same as the start date. Please choose a later end date.",
                             function() {}
@@ -368,7 +341,7 @@ Experiment Session Management
                         return;
                     }
                     experiment_session_old_pk = session.pk();
-                    var formData = 'location='+session.location()+'&capacity='+session.capacity()+'&scheduled_date='+scheduled_date+'&experiment_metadata='+session.experiment_metadata()+ '&scheduled_end_date='+scheduled_end_date;
+                    var formData = 'location='+session.location()+'&capacity='+session.capacity()+'&scheduled_date='+session.start_date()+'&experiment_metadata='+session.experiment_metadata()+ '&scheduled_end_date='+session.end_date();
                     $.post("session/manage/"+ experiment_session_old_pk, formData)
                         .done(function(result) {
                             if(result.success) {
@@ -393,12 +366,10 @@ Experiment Session Management
 
                 model.removeSession = function(session, event) {
                     if(session.pk() == -1) return model.session_list.remove(session);
-
-                    bootbox.confirm("Delete this session? All associated invitations and signups will be removed.",
+                        bootbox.confirm("Delete this session? All associated invitations and signups will be removed.",
                         function(result) {
                             if (result) {
-                                var scheduled_date = session.start_date() + " " + session.start_hour() + ":" + session.start_min();
-                                var formData = 'request_type=delete&location='+session.location()+'&capacity='+session.capacity()+'&scheduled_date='+scheduled_date+'&experiment_metadata='+session.experiment_metadata();
+                                var formData = 'request_type=delete&location='+session.location()+'&capacity='+session.capacity()+'&scheduled_date='+session.start_date()+'&experiment_metadata='+session.experiment_metadata();
                                 $.post("session/manage/"+ session.pk(), formData)
                                     .done(function(result) {
                                         if(result.success){
@@ -472,12 +443,9 @@ Experiment Session Management
             var SessionModel = function(data) {
                 var self = this;
                 ko.mapping.fromJS(data, {}, self);
-                
+
                 self.active = ko.computed( function() {
-                    var milliSecInHour = 60 * 60 * 1000, currentTime = new Date().getTime();
-                    var yesterdayTimestamp = currentTime - (24 * milliSecInHour);
-                    var sessionEndTimestamp = new Date(self.end_date()).getTime() + self.end_hour() * milliSecInHour + self.end_min() * 60 * 1000;
-                    return (self.pk() == -1 || (sessionEndTimestamp >= yesterdayTimestamp));
+                    return (self.pk() == -1 || ( +new Date(self.end_date()) >= +new Date()));
                 });
                 self.makeEditable = function () {
                     self.isEditable(true);
