--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -3,7 +3,7 @@
 {{ experiment.experiment_metadata }} #{{ experiment.pk }}
 {% endblock %}
 {% block page %}
-<h3><span data-bind='if: isArchived'><span style='padding: 8px; -webkit-border-radius: 3px; border-radius: 3px; -moz-border-radius: 3px; border: 1px solid #fbeed5;' class='alert-success'><i class='fa fa-floppy-o'></i> ARCHIVED</span> </span> {{experiment}}</h3>
+<h3><span data-bind='if: isArchived'><span style='padding: 8px; -webkit-border-radius: 3px; border-radius: 3px; -moz-border-radius: 3px; border: 1px solid #fbeed5;' class='alert-success'><i class='fa fa-floppy-o'></i> ARCHIVED</span> </span>{{experiment}}</h3>
 <div class='row'>
     <div class='col-md-6'>
         <div class='alert alert-white' data-bind='visible: isActive'>
@@ -15,11 +15,9 @@
             <a class='btn btn-primary' data-bind='click: updateParticipants' data-content='Requests all connected participants to update themselves.' ><i class='fa fa-exchange'></i> update participants</a>
             <a class='btn btn-danger' data-bind='click: confirmExperimentControllerAction.bind($data, false)' data-action='deactivate' data-content='Deactivates this experiment and disables participant logins.'><i class='fa fa-power-off'></i> deactivate</a>
             {% endcomment %}
-            <hr>
             <a class='btn btn-danger' data-bind="click: confirmExperimentControllerAction.bind($data, true)"
                 data-action='restart' data-content='Restart the experiment from the beginning, clearing all group and participant data and returning to the first round.' data-original-title='Reset Experiment'>
                 <i class='fa fa-arrow-circle-up'></i> restart experiment</a>
-            <hr>
             <a class='btn btn-primary' href="{% url 'core:show_experiment_configuration' experiment.experiment_configuration.pk %}"> view experiment configuration </a>
         </div>
         <div data-bind="ifnot: isActive() || isArchived()">
@@ -119,8 +117,8 @@
             </div>
         </div>
     </div>
-        <div class="col-md-6">
-            <div style='padding-right: 8px;' class='alert alert-warning'>
+    <div class="col-md-6">
+        <div style='padding-right: 8px;' class='alert alert-warning'>
             <h4>EXPERIMENT LOG</h4>
             <div id='experiment-messages' data-bind='foreach: messages'>
                 <div>
@@ -128,29 +126,24 @@
                 </div>
             </div>
         </div>
-    </div>
-</div>
-<h3>Experiment Data</h3>
-<div id='experiment-chat-accordion'>
-    <div class='panel-group'>
-        <div class="panel panel-default">
-            <div class='panel-heading'>
-                <h4 class="panel-title">
-                    <a data-toggle='collapse' data-parent='#experiment-chat-accordion' href='#experiment-chat-messages'>All Chat Messages</a>
-                </h4>
+        <div class='panel-group'>
+            <div class="panel panel-default">
+                <div class='panel-heading'>
+                    <h4 class="panel-title">Chat Messages</h4>
+                </div>
             </div>
-        </div>
-        <div id='experiment-chat-messages' class='scrollable-messages panel-collapse collapse in'>
-            <div class='alert alert-warning panel-body' data-bind='foreach: chatMessages'>
-                <div>
-                    <span data-bind='text: participant_number'></span>(<span data-bind='text: group'></span>): <strong data-bind='text: value'></strong>
-                    <span class='pull-right' data-bind='text: short_date_created'></span>
+            <div id='experiment-chat-messages' class='scrollable-messages'>
+                <div class='alert alert-warning panel-body' data-bind='foreach: chatMessages'>
+                    <div>
+                        <span data-bind='text: participant_number'></span>(<span data-bind='text: group'></span>): <strong data-bind='text: value'></strong>
+                        <span class='pull-right' data-bind='text: short_date_created'></span>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
+<h3>Experiment Data</h3>
 <div id='round-data-accordion' data-bind='foreach: allRoundData'>
     <div class='panel-group'>
         <div class="panel panel-default">
